--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    @apply bg-gray-200 text-black;
+}
+
+html.dark  {
+    @apply bg-gray-700 text-white;
+}
