replace tailwind to chakra-ui

--- a/plop-templates/component/Component.tsx.hbs
+++ b/plop-templates/component/Component.tsx.hbs
@@ -1,25 +1,14 @@
-import { ComponentPropsWithoutRef, forwardRef } from 'react';
-import { tv, VariantProps } from 'tailwind-variants';
+import { Box, BoxProps, forwardRef } from '@chakra-ui/react';
 
-const {{camelCase name}}Variants = tv({
-  slots: {
-    box: '',
-  },
-  variants: {},
-});
+export type {{pascalCase name}}Props = {} & BoxProps;
 
-export type {{pascalCase name}}VaritantProps = VariantProps<typeof {{camelCase name}}Variants>;
-
-export type {{pascalCase name}}Props = {} & ComponentPropsWithoutRef<'div'> & {{pascalCase name}}VaritantProps;
-
-export const {{pascalCase name}} = forwardRef<HTMLDivElement, {{pascalCase name}}Props>(
-  ({ className, ...props }, ref) => {
-    const { box } = {{camelCase name}}Variants();
+export const {{pascalCase name}} = forwardRef<'div', {{pascalCase name}}Props>(
+  ({ ...props }, ref) => {
 
     return (
-      <div {...props} ref={ref} className={box({ className })}>
+      <Box ref={ref} {...props}>
 
-      </div>
+      </Box>
     );
   }
 );
