--- a/plop-templates/component/Component.tsx.hbs
+++ b/plop-templates/component/Component.tsx.hbs
@@ -2,7 +2,7 @@ import { Box, BoxProps, forwardRef } from '@chakra-ui/react';
 
 export type {{pascalCase name}}Props = {} & BoxProps;
 
-export const {{pascalCase name}} = forwardRef<'div', {{pascalCase name}}Props>(
+export const {{pascalCase name}} = forwardRef<{{pascalCase name}}Props, 'div'>(
   ({ ...props }, ref) => {
 
     return (
