--- a/plop-templates/component/Component.tsx.hbs
+++ b/plop-templates/component/Component.tsx.hbs
@@ -4,13 +4,13 @@ import { cn } from '~/utils/tailwindUtil';
 
 export type {{pascalCase name}}Props = {} & ComponentPropsWithoutRef<'div'>;
 
-export const {{pascalCase name}} = forwardRef<HTMLDivElement, {{pascalCase name}}Props>(
-  ({ className, children, ...props }, ref) => {
+export const {{pascalCase name}}:FC<{{pascalCase name}}Props> = ({ className, children, ...props }) => {
 
-    return (
-      <div {...props} ref={ref} className={cn('', className)}>
-        {children}
-      </div>
-    );
-  }
-);
+  return (
+    <div {...props} className={cn('', className)}>
+      {children}
+    </div>
+  );
+};
+
+{{pascalCase name}}.displayName = '{{pascalCase name}}';
